Changelog
=======================================================
07052012:
1, add chmod.sh to make chmod easier when needed
2, Stop The Development of testing-pythonize Branch
3, Remove HOW-TO as I will write tutorial soon
4, fix 'File name too long cause Notepad for Kindle will auto cut off extra words'
5, clean unused script
6, modify git.sh as I always forget to edit changelog

testing-variable:
1, arrange variable(strings)
2, change variable.py to config.py
3, modulize variable(strings)
4, add Usage to gensl.py, genpl.py and config.py
5, add config.py to pdp/ppd (push.sh, pull.sh and diff.sh)
6, disable m3u when playall/playrandom
7, fix 'arrange by type' (cause by filter method)
8, finished adding method for changing environment