@@ -17,8 +17,8 @@ M N = !/mnt/us/mplayer/control.sh next
 ;; Mplayer Custom Items
 P G = !/mnt/us/python/bin/python2.6 /mnt/us/SotongDJ/gensl.py --playlist &
 P P = !/mnt/us/mplayer/control.sh playlist
+P N = !echo notepad>/mnt/us/SotongDJ/editor.conf
+P K = !echo kindlenote>/mnt/us/SotongDJ/editor.conf
+P C = !echo chinese>/mnt/us/SotongDJ/editor.conf
 T G = !/mnt/us/python/bin/python2.6 /mnt/us/SotongDJ/gensl.py --strlist &
 T P = !/mnt/us/mplayer/control.sh playstr
-;; V U = !/mnt/us/mplayer/control.sh volup &
-;; V D = !/mnt/us/mplayer/control.sh voldown &
-;;
