@@ -16,4 +16,5 @@ testing-variable:
 5, add config.py to pdp/ppd (push.sh, pull.sh and diff.sh)
 6, disable m3u when playall/playrandom
 7, fix 'arrange by type' (cause by filter method)
-8, finished adding method for changing environment
+8, finished adding method for changing environment (include Chinese support)
+9, simplify playall's and playrand's codes
